feat: add endpoint for accepting candidate flashcard by id
